# steadycast

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: default_library.json
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  db.rs  keys.rs  lib.rs  library.rs  license.rs  presets.rs  settings.rs  stream.rs  synth_stream.rs  user_assets.rs  windows.rs
src/components/: AppHeader.tsx  AssetPicker.tsx  SettingsPanel.tsx  StatusBar.tsx  StreamConfig.tsx  SyntheticControls.tsx  SyntheticPanel.tsx
src/hooks/: useAmbient.ts  useSynth.ts
src/lib/: AmbientEngine.ts  SyntheticEngine.ts  audioUtils.ts
src/windows/: LogsWindow.tsx  PreviewWindow.tsx
